--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- Tab Layout -->
@@ -10,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/navbar_color"
-        app:tabTextColor="@android:color/white"
-        app:tabSelectedTextColor="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="@android:color/white"
-        app:layout_constraintTop_toTopOf="parent">
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="@android:color/white">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -33,29 +32,29 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintBottom_toTopOf="@id/buttonContainer" />
+        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
 
     <!-- Button container for bottom buttons -->
     <LinearLayout
         android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_margin="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent">
 
-<!--         Vibrate Watch Button -->
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:id="@+id/vibrateWatchButton"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="4dp"-->
-<!--            android:text="VIBRATE WATCH"-->
-<!--            android:textSize="16sp"-->
-<!--            android:paddingTop="12dp"-->
-<!--            android:paddingBottom="12dp"-->
-<!--            app:backgroundTint="#E91E63" />-->
+        <!--         Vibrate Watch Button -->
+        <!--        <com.google.android.material.button.MaterialButton-->
+        <!--            android:id="@+id/vibrateWatchButton"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="4dp"-->
+        <!--            android:text="VIBRATE WATCH"-->
+        <!--            android:textSize="16sp"-->
+        <!--            android:paddingTop="12dp"-->
+        <!--            android:paddingBottom="12dp"-->
+        <!--            app:backgroundTint="#E91E63" />-->
 
     </LinearLayout>
 
