--- a/mobile/src/main/res/layout/fragment_audio_recorder_off.xml
+++ b/mobile/src/main/res/layout/fragment_audio_recorder_off.xml
@@ -45,31 +45,6 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-132dp">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/recordingAnimation"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/vehicleAnimation"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true" />
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/vehicleAnimation"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="16dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/statusText"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recordingAnimation"
-            app:lottie_autoPlay="false"
-            app:lottie_loop="false" />
 
         <!-- Single Mic Animation Button - centered in portrait -->
 
@@ -80,19 +55,33 @@
             android:layout_marginTop="16dp"
             android:text="Audio Recorder"
             android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/centerIcon"
             app:layout_constraintHorizontal_bias="0.101"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/vehicleAnimation"
             android:layout_marginBottom="35dp"/>
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/vehicleAnimation"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:visibility="gone"
+            android:elevation="10dp"
+            android:translationZ="10dp"
+            app:layout_constraintTop_toTopOf="@id/centerIcon"
+            app:layout_constraintBottom_toBottomOf="@id/centerIcon"
+            app:layout_constraintStart_toStartOf="@id/centerIcon"
+            app:layout_constraintEnd_toEndOf="@id/centerIcon"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false" />
 
         <ImageView
             android:id="@+id/centerIcon"
             android:layout_width="349dp"
             android:layout_height="299dp"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toTopOf="@id/micButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,15 +89,17 @@
             app:srcCompat="@drawable/frame_1"
             android:layout_marginBottom="24dp"/>
 
-        <com.airbnb.lottie.LottieAnimationView
+
+
+        <ImageButton
             android:id="@+id/micButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@null"
+            android:stateListAnimator="@null"
             android:src="@drawable/group_15"
-            app:srcCompat="@drawable/recording_button_selector"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintHorizontal_bias="0.498"
@@ -116,6 +107,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:lottie_autoPlay="false"
             app:lottie_loop="true"
+            android:scaleType="centerInside"
             app:layout_constraintTop_toBottomOf="@id/centerIcon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
