--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="highlight_color">#80ADD8E6</color>
     <color name="navbar_color">#2754C3</color>
+    <color name="purple_500">#6C5CE7</color>
+    <color name="purple_200">#A29BFE</color>
+    <color name="light_gray">#F2F2F2</color>
 </resources>
